--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -6,4 +6,4 @@ The prevailing industry response to the context limitation has been the widespre
 
 We propose a paradigm shift from treating memory as a passive database retrieval problem to treating it as an active resource management problem within a \textbf{Cognitive Operating System}. In this view, memory management becomes analogous to virtual memory management in traditional OS kernels. We introduce \textbf{Aeon}, a system that formalizes these operations. \textit{Allocation} corresponds to the deliberate writing of new semantic concepts into a structured \textit{Atlas}; \textit{paging} transforms into the loading of relevant semantic clusters into a \textbf{Semantic Lookaside Buffer (SLB)} for immediate, low-latency access; and \textit{context switching} is re-framed as the deterministic movement between branches of a decision tree. By enforcing these rigorous abstractions, Aeon transforms the probabilistic chaos of vector search into a deterministic navigational process. This empowers the agent to utilize a ``Memory Palace''—a spatial index where information is stored not just by what it means, but by where it belongs relative to other concepts in the agent's ontology. This spatial locality enables the system to predictively pre-fetch memory, much like a CPU pre-fetches instructions based on spatial and temporal locality, drastically reducing the latency penalty of retrieval and allowing the agent to "think" at the speed of conversation.
 
-Our contributions in this paper are threefold. First, we introduce \textbf{Atlas}, a high-performance, memory-mapped B+ Tree that organizes uniform vectors into a navigable, hierarchical index. Unlike HNSW or IVFPQ indices which optimize purely for recall at the expense of insert performance and structure, Atlas optimizes for semantic locality and stable modification. It utilizes a custom SIMD-accelerated math kernel to perform metric comparisons, ensuring that the tree structure strictly adheres to the geometry of the embedding space. Second, we present the \textbf{Trace}, a neuro-symbolic directed acyclic graph (DAG) that explicitly tracks the agent's episodic state. The Trace records the traversal path of the agent, creating distinct nodes for User inputs, System responses, and intermediate thoughts, linked by typed edges (CAUSAL, NEXT, REFERS\_TO). This enables capabilities such as backtracking and context anchoring that are impossible in flat vector stores. Finally, we demonstrate the implementation of a zero-copy architecture bridging C++23 and Python. By harnessing the \texttt{nanobind} library, Aeon exposes internal C++ memory structures as read-only NumPy arrays, eliminating serialization overhead. This allows Aeon to achieve retrieval latencies of $< 1$ms on standard conversational workloads, validating the feasibility of this Cognitive OS approach for real-time, interactive agents that require both the speed of systems programming and the flexibility of high-level reasoning.
+Our contributions in this paper are threefold. First, we introduce \textbf{Atlas}, a high-performance, memory-mapped B+ Tree that organizes uniform vectors into a navigable, hierarchical index. Unlike HNSW or IVFPQ indices which optimize purely for recall at the expense of insert performance and structure, Atlas optimizes for semantic locality and stable modification. It utilizes a custom SIMD-accelerated math kernel to perform metric comparisons, ensuring that the tree structure strictly adheres to the geometry of the embedding space. Second, we present the \textbf{Trace}, a neuro-symbolic directed acyclic graph (DAG) that explicitly tracks the agent's episodic state. The Trace records the traversal path of the agent, creating distinct nodes for User inputs, System responses, and intermediate thoughts, linked by typed edges (CAUSAL, NEXT, REFERS\_TO). This enables capabilities such as backtracking and context anchoring that are impossible in flat vector stores. Finally, we demonstrate the implementation of a zero-copy architecture bridging C++23 and Python. By harnessing the \texttt{nanobind} library, Aeon exposes internal C++ memory structures as read-only NumPy arrays, eliminating serialization overhead. This allows Aeon to achieve effective retrieval latencies of $< 5\mu$s on standard conversational workloads, validating the feasibility of this Cognitive OS approach for real-time, interactive agents that require both the speed of systems programming and the flexibility of high-level reasoning.
