--- a/paper/references.bib
+++ b/paper/references.bib
@@ -91,3 +91,44 @@
   howpublished={\url{https://github.com/hwchase17/langchain}},
   note={Accessed: 2024-01-01}
 }
+
+@article{mohan1992aries,
+  title={{ARIES}: A Transaction Recovery Method Supporting Fine-Granularity Locking and Partial Rollbacks Using Write-Ahead Logging},
+  author={Mohan, C and Haderle, Don and Lindsay, Bruce and Pirahesh, Hamid and Schwarz, Peter},
+  journal={ACM Transactions on Database Systems},
+  volume={17},
+  number={1},
+  pages={94--162},
+  year={1992},
+  publisher={ACM}
+}
+
+@phdthesis{fraser2004ebr,
+  title={Practical Lock-Freedom},
+  author={Fraser, Keir},
+  school={University of Cambridge},
+  year={2004}
+}
+
+@inproceedings{conneau2018csls,
+  title={Word Translation Without Parallel Data},
+  author={Conneau, Alexis and Lample, Guillaume and Ranzato, Marc'Aurelio and Denoyer, Ludovic and J{\'e}gou, Herv{\'e}},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2018}
+}
+
+@misc{googlebenchmark,
+  title={Google Benchmark: A Microbenchmark Support Library},
+  author={{Google Inc.}},
+  year={2024},
+  howpublished={\url{https://github.com/google/benchmark}},
+  note={Accessed: 2024-01-01}
+}
+
+@misc{antirez2009redis,
+  title={Redis Persistence Demystified},
+  author={Sanfilippo, Salvatore},
+  year={2009},
+  howpublished={\url{http://oldblog.antirez.com/post/redis-persistence-demystified.html}},
+  note={Accessed: 2024-01-01}
+}
